# MC-DOCR

./: CMakeLists.txt  STM32F4xx_FLASH.ld  arm-none-eabi-gcc.cmake
.cache/clangd/index/: cmsis_compiler.h.90AF4E98AD9FB553.idx  cmsis_gcc.h.D9D4CD20C0109F88.idx  cmsis_version.h.FBA5674B5B7E1BD0.idx  core_cm4.h.B740350A2D0DD740.idx  main.c.166D57633CA047B7.idx  main.h.6CBF8045E8E29D4B.idx  mpu_armv7.h.02C45343F7A335A9.idx  startup_stm32f401xe.s.C2EF0AC18226019D.idx  startup_stm32f407xx.s.311CFA5DBAFD9AF4.idx  stm32_hal_legacy.h.53FDE52094B9A017.idx  stm32f401xe.h.FF886399C9A4FDFD.idx  stm32f407xx.h.2D5199AC3375D141.idx  stm32f4xx.h.D29632C26100F1FD.idx  stm32f4xx_hal.c.B595A0672821E6A3.idx  stm32f4xx_hal.h.A4E8EAB5EAE9C83B.idx  stm32f4xx_hal_adc.c.DBE9F44699B19483.idx  stm32f4xx_hal_adc.h.C1CAC3AB7709693F.idx  stm32f4xx_hal_adc_ex.c.128ACFE5214C17E5.idx  stm32f4xx_hal_adc_ex.h.85652C9A127297BE.idx  stm32f4xx_hal_can.c.AA52A2B21D677F6B.idx  stm32f4xx_hal_can.c.AF12984870E20283.idx  stm32f4xx_hal_can.h.9EAEE0E153BEA87F.idx  stm32f4xx_hal_cec.c.D5F06D99AE31BF84.idx  stm32f4xx_hal_cec.h.D94EA1BF387D0215.idx  stm32f4xx_hal_conf.h.6D87926C6433C70D.idx  stm32f4xx_hal_cortex.c.ED2B9733E223525E.idx  stm32f4xx_hal_cortex.h.ECAA5C0D40136AC2.idx  stm32f4xx_hal_crc.c.7870D96FF99EDDCE.idx  stm32f4xx_hal_crc.h.7882C8C65D163575.idx  stm32f4xx_hal_cryp.c.C30D2E22A0AEF228.idx  stm32f4xx_hal_cryp.h.F7145E5A8B0D9E2F.idx  stm32f4xx_hal_cryp_ex.c.6C5692BA7AA32088.idx  stm32f4xx_hal_dac.c.0263F896BB6085A0.idx  stm32f4xx_hal_dac.h.083679483DB4C55E.idx  stm32f4xx_hal_dac_ex.c.AA84A32019A0DCB7.idx  stm32f4xx_hal_dac_ex.h.42AE92F89EC5D3C6.idx  stm32f4xx_hal_dcmi.c.543C2950296A9E0E.idx  stm32f4xx_hal_dcmi.h.132946AA0D15B6A3.idx  stm32f4xx_hal_dcmi_ex.c.800ABA377F0C8D89.idx  stm32f4xx_hal_dcmi_ex.h.DED864BF7D281AB1.idx  (+140 more)
Inc/: main.h  stm32f4xx_it.h
Src/: main.c  stm32f4xx_it.c
